[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipcam-checker"
version = "0.1.0"
description = "Async IP camera health checker: ping, RTSP streams, snapshots, plugin system"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "local-ffmpeg>=0.1.0",
    "httpx>=0.27",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ipcam_checker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
