[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ipcam-checker"
dynamic = ["version"]
description = "Async IP camera health checker: ping, RTSP streams, snapshots, plugin system"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "local-ffmpeg>=0.1.0",
    "httpx>=0.27",
    "Pillow>=10.0",
    "icmplib>=3.0",
    "python-json-logger>=2.0",
]

[project.urls]
Homepage = "https://github.com/corgan2222/ipcam_checker"
Repository = "https://github.com/corgan2222/ipcam_checker"
Issues = "https://github.com/corgan2222/ipcam_checker/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
    "python-dotenv>=1.0",
]
loki = [
    "python-logging-loki>=0.3",
]
onvif = [
    "onvif-zeep>=0.2.12",
]
discovery = [
    "zeroconf>=0.115",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ipcam_checker/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ipcam_checker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]   # line-too-long handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["ipcam_checker"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests
